--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -64,7 +64,7 @@
   z-index: 0;
   width: 100%;
   height: 100%;
-  transition: transform 0.6 ease-in-out;
+  transition: transform 0.6s ease-in-out;
   transform: scale(0.1);
 }
 .copy-overlay.show {
